doc folder added

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-# Do not include user's local data or history info
-.RData
-.Rhistory
+# Do not include user's local data or history info (inluding .RData and .Rhistory for RStudio users)
+.*
 
 # Do not include uncompressed data (inefficient, and exceeds GitHub's 100M file limit)
 NFLData_2000-2013/
