do not put data (output) folder under rev ctrl

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 # Do not include uncompressed data (inefficient, and exceeds GitHub's 100M file limit)
 NFLData_2000-2013/
 NFLData_2012_WK1-8/
+data/
